Bug 1112519 - Clear mDropVideoUntilNextDiscontinuity when we do not seek r=cpearce