dom/media/MediaDecoderStateMachine.cpp
@@ -2496,6 +2496,8 @@ void MediaDecoderStateMachine::DecodeSeek()
 
   if (!currentTimeChanged) {
     DECODER_LOG("Seek !currentTimeChanged...");
+    mDropAudioUntilNextDiscontinuity = false;
+    mDropVideoUntilNextDiscontinuity = false;
     nsresult rv = DecodeTaskQueue()->Dispatch(
       NS_NewRunnableMethod(this, &MediaDecoderStateMachine::SeekCompleted));
     if (NS_FAILED(rv)) {
